[metadata]
name = abuseACL
version = attr: abuseACL.__version__
description = abuseACL is a python script to automatically list vulnerable Windows ACEs/ACLs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AetherBlack/abuseACL
license = MIT
license_files = LICENSE
classifiers =
    # See: https://pypi.python.org/pypi?:action=list_classifiers
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    # List of Python versions and their support status:
    # https://en.wikipedia.org/wiki/History_of_Python#Support
    # https://endoflife.date/python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Bug Tracker = https://github.com/AetherBlack/abuseACL/issues

[options]
packages =
    abuseACL
    abuseACL.core
    abuseACL.network
    abuseACL.structures
    abuseACL.structures.ADObject
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    abuseACL = abuseACL.__main__:main

[options.data_files]
. = requirements.txt

[requirements-files]
# setuptools does not support "file:", so use a extra package for this:
# https://pypi.org/project/setuptools-declarative-requirements/
# https://github.com/pypa/setuptools/issues/1951#issuecomment-718094135
install_requires = requirements.txt
